<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/two"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MovieDetailFragment">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_shape"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/email"
                app:hintTextAppearance="@style/GreyTextInputLayout">


                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_40"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:hintTextAppearance="@style/GreyTextInputLayout"
                app:passwordToggleEnabled="true">


                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_40"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/four"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/four"
                android:text="@string/remeber_Checkbox"
                android:textColor="@color/grey_80" />


            <Button
                android:id="@+id/button_signIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="25dp"
                android:background="@drawable/btn_rounded_shape"
                android:text="SIGN IN"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-or you can also-"
                android:textColor="@color/grey_80"
                android:textSize="14sp" />


            <Button
                android:id="@+id/login_Google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:background="@drawable/round_corner_btn"
                android:drawableLeft="@drawable/googlee"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/grey_40"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.core.widget.NestedScrollView>