<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/category_dialoh_color">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/group" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createCategory"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="@font/adamina"
            android:textSize="16sp"/>

        <FrameLayout
            android:id="@+id/image_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/category_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_image"
                app:civ_border_color="#D3D1D1"
                app:civ_border_width="2dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/category_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photograph"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_gravity="center"
                android:visibility="visible"
                />

        </FrameLayout>

        <EditText
            android:id="@+id/grpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/categoryName"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="#375714"
                android:text="@string/create"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/cancel"
                android:layout_marginStart="10dp"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>