<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_theme_color"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.fragment.SignUpFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_shape"
            android:orientation="vertical"
            android:padding="30dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/frame">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="160dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile_image"
                    app:civ_border_color="@color/ten"
                    app:civ_border_width="2dp"/>

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    android:src="@drawable/photograph"
                    android:visibility="visible"
                    android:layout_marginLeft="95dp"/>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/name"
                app:hintTextAppearance="@style/GreyTextInputLayout"
                >


                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_40"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/email"
                app:hintTextAppearance="@style/GreyTextInputLayout">


                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_40"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:hintTextAppearance="@style/GreyTextInputLayout"
                app:passwordToggleEnabled="true"
                app:helperText=" at least one digit. \n minimum 6 letters to maximum 16 letters."
                >


                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey_40"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="25dp"
                android:background="@drawable/btn_rounded_shape"
                android:text="NEXT"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.core.widget.NestedScrollView>